# traticker

./: README.md  package-lock.json  pyproject.toml  tailwind.config.js
src/traticker/: __init__.py  __main__.py  app.py
src/traticker/models/: setting.py  user.py
src/traticker/static/css/: tailwind.css
src/traticker/templates/: head.html
src/traticker/templates/user/: login.html
src/traticker/utils/: discord.py
src/traticker/views/: __init__.py  user.py
