[project]
name = "traticker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "darallium", email = "contact@darallium.com" }
]
dependencies = [
    "flask>=3.0.3",
    "flask-migrate>=4.0.7",
    "flask-login>=0.6.3",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"traticker" = "traticker:main"

[tool.rye.scripts]
server = { call = "traticker:main" }
tailwind = {cmd = "npx", args = ["tailwindcss", "-i", "./static/css/tailwind.css", "-o", "src/traticker/static/css/tailwind.css"]}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/traticker"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    "D", # pydocstyle
]
ignore = []
# 1行の最大文字数

extend-ignore = [
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "D415" # ends-in-punctuation
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
